--- a/header.html
+++ b/header.html
@@ -26,10 +26,17 @@
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#details">DETAILS</a>
                     </li>
-
                     <!-- Dropdown Menu -->          
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle page-scroll" href="#video" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">VIDEO</a>
+                        <a class="nav-link dropdown-toggle page-scroll" href="#video" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">Esports</a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="./rhu.html"><span class="item-text">RHU (Regicide Hockey Union)</span></a>
+                            <div class="dropdown-items-divide-hr"></div>
+                    </li>
+			
+                    <!-- Dropdown Menu -->          
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle page-scroll" href="#video" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">VIDEOS</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="article-details.html"><span class="item-text">Twitch</span></a>
                             <div class="dropdown-items-divide-hr"></div>
