--- a/pgheader.html
+++ b/pgheader.html
@@ -45,7 +45,7 @@
                     </li>
                 </ul>
                 <span class="nav-item">
-                    <a class="btn-outline-sm" href="log-in.html">LOG IN</a>
+                    <a class="btn-outline-sm" href="login.html">LOG IN</a>
                 </span>
             </div>
         </div> <!-- end of container -->
